# mirrorllm

./: Dockerfile  best_of_n.py  dspy_reflect.py  eval_reward.py  fly.toml  lib.py  local_reward.py  mcts_results.jsonl  modal_orm_reward.py  modal_prime.py  modal_prm_armorm.py  modal_prm_reward.py  modal_reward.py  modal_train_policy_orpo.py  modal_train_policy_sft.py  modal_train_policy_sft_metamath.py  modal_train_policy_sft_prime.py  modal_train_policy_sft_qwq.py  modal_train_policy_simpo.py  modal_train_prm.py  modal_train_prm_init.py  modal_train_prm_rlhf_flow.py  modal_train_prm_st.py  modal_tree_grpo.py  modal_vespa.py  modal_vllm.py  modal_vllm_chat.py  modal_vllm_prm.py  modal_vllm_qwq.py  prime_training_local.py  pyproject.toml  readme.md  simple_bench_public.csv  simplebench_best_of_n.py  simplebench_eval_reward.py  test_vllm_prm.py  tweak_prime_rl_data.py
backup/: modal_reward_save.py
mcts/: generate.py  greedy_sample.py  process_results.py  reward.py  simple_sample.py  test.py  train_policy_orpo.py  train_policy_sft.py  train_policy_sft_metamath.py  train_policy_sft_prime.py  train_policy_sft_qwq.py  train_policy_simpo.py  train_reward.py  tree_search.py  tree_search_chat.py  tree_search_light_mathrm.py  tree_search_mathrm.py  util.py
prm_rlhf_flow/: qwen.yml
reinforcement_learning/: tree_grpo.py
vespa/: Dockerfile
