[tool.poetry]
name = "mirrorllm"
version = "0.1.0"
description = ""
authors = ["Robert Washbourne <rawashbourne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dspy-ai = "^2.4.16"
torch = "^2.4.1"
modal = "^0.64.131"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
