[tool.poetry]
name = "mirrorllm"
version = "0.1.0"
description = ""
authors = ["Robert Washbourne <rawashbourne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dspy-ai = "^2.4.16"
modal = "^0.72.10"
cachetools = "^5.5.0"
aiomultiprocess = "^0.9.1"
tiktoken = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
